--- a/00002_Master Microservices/0003-Section- Restful Web Services with Spring Boot/restful-web-services/pom.xml
+++ b/00002_Master Microservices/0003-Section- Restful Web Services with Spring Boot/restful-web-services/pom.xml
@@ -86,9 +86,9 @@
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.0</version>
 		</dependency>
 
 	</dependencies>
