--- a/00002_Master Microservices/0003-Section- Restful Web Services with Spring Boot/restful-web-services/src/main/resources/application.properties
+++ b/00002_Master Microservices/0003-Section- Restful Web Services with Spring Boot/restful-web-services/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 good.morning.message=Good Morning
+
+#logging.level.org.springframework = DEBUG
+#management.security.enabled = false
+#management.endpoints.web.exposure.include=*
