--- a/00002_Master Microservices/0003-Section- Restful Web Services with Spring Boot/restful-web-services/src/main/resources/application.properties
+++ b/00002_Master Microservices/0003-Section- Restful Web Services with Spring Boot/restful-web-services/src/main/resources/application.properties
@@ -1,5 +1,14 @@
-good.morning.message=Good Morning
+#good.morning.message=Good Morning
 
 #logging.level.org.springframework = DEBUG
 #management.security.enabled = false
 #management.endpoints.web.exposure.include=*
+
+# suppress inspection "UnusedProperty"
+spring.security.user.name=user
+# suppress inspection "UnusedProperty"
+spring.security.user.password=admin5
+# suppress inspection "UnusedProperty"
+spring.jpa.show-sql=true
+# suppress inspection "UnusedProperty"
+spring.h2.console.enabled=true
