--- a/00002_Master Microservices/0003-Section- Restful Web Services with Spring Boot/restful-web-services/pom.xml
+++ b/00002_Master Microservices/0003-Section- Restful Web Services with Spring Boot/restful-web-services/pom.xml
@@ -15,7 +15,14 @@
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		<spring-cloud.version>Finchley.M8</spring-cloud.version>
+		<guava.version>25.0-jre</guava.version>
+		<swagger.version>2.9.0</swagger.version>
+		<jacoco.version>0.8.1</jacoco.version>
+		<dependency.locations.enabled>false</dependency.locations.enabled>
 	</properties>
 
 	<dependencies>
@@ -34,6 +41,12 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 			<version>2.0.1.RELEASE</version>
 		</dependency>
+
+
+		<!--<dependency>-->
+			<!--<groupId>org.springframework.boot</groupId>-->
+			<!--<artifactId>spring-boot-starter-security</artifactId>-->
+		<!--</dependency>-->
 
 		<dependency>
 			<groupId>org.springframework.data</groupId>
@@ -67,6 +80,11 @@
 			<version>2.4.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
 
 		<dependency>
 			<groupId>com.fasterxml</groupId>
@@ -110,9 +128,41 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>build-info</goal>
+							<goal>repackage</goal>
+						</goals>
+						<configuration>
+							<classifier>exec</classifier>
+							<outputDirectory>target/exec</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>${jacoco.version}</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
+
 
 	<repositories>
 		<repository>
