--- a/00002_Master Microservices/0004-SpringCloud/spring-cloud-config-server/src/main/resources/application.properties
+++ b/00002_Master Microservices/0004-SpringCloud/spring-cloud-config-server/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 
 spring.application.name=spring-cloud-config-server
 server.port=8888
+
+spring.cloud.config.server.git.uri=file:///Users/franckmukendi/Documents/Learn/Java/Courses_Java_Config_Server
