--- a/00002_Master Microservices/0004-SpringCloud/currency-conversion-service/pom.xml
+++ b/00002_Master Microservices/0004-SpringCloud/currency-conversion-service/pom.xml
@@ -45,6 +45,10 @@
 			<artifactId>spring-cloud-starter-feign</artifactId>
 			<version>1.4.7.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-ribbon</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
