--- a/00002_Master Microservices/0004-SpringCloud/currency-conversion-service/pom.xml
+++ b/00002_Master Microservices/0004-SpringCloud/currency-conversion-service/pom.xml
@@ -54,6 +54,10 @@
             <artifactId>spring-cloud-starter-ribbon</artifactId>
             <version>1.4.7.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
