--- a/00002_Master Microservices/0007-SpringOauth2-test-002/ssooauth2/src/main/resources/application.yml
+++ b/00002_Master Microservices/0007-SpringOauth2-test-002/ssooauth2/src/main/resources/application.yml
@@ -14,6 +14,8 @@ security:
     resource:
       userInfoUri: https://api.github.com/user
       preferTokenInfo: false
+#      jwk:
+#        key-set-uri: https://github.com/login/oauth/token_keys
 #view resolver
 spring:
   mvc:
