--- a/00002_Master Microservices/0009-OauthSocialLogin/OauthSocialLogIn000/src/main/resources/application.yml
+++ b/00002_Master Microservices/0009-OauthSocialLogin/OauthSocialLogIn000/src/main/resources/application.yml
@@ -25,10 +25,10 @@ github:
 #server port
 server:
   port: 9000
-security:
-  oauth2:
-    client:
-      client-id: acme
-      client-secret: acmesecret
-      scope: read,write
-      auto-approve-scopes: '.*'
+#security:
+#  oauth2:
+#    client:
+#      client-id: acme
+#      client-secret: acmesecret
+#      scope: read,write
+#      auto-approve-scopes: '.*'
